k8s-checkout/pricing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing
  template:
    metadata:
      labels:
        app: pricing
    spec:
      containers:
        - name: pricing
          image: pricing:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: pricing
spec:
  selector:
    app: pricing
  ports:
    - port: 8082
      targetPort: 8082
